1.18.9999
  * 'ci.coords' can now take the same 'input' values as 'coords' (issue #90)
  * 'ci.coords' can be 'plot'ted
  * Added "lr_pos" and "lr_neg" to 'coords' (issue #102)
  * Deprecated 'transpose', 'as.list', 'as.matrix' and 'drop' in 'coords'

1.18.5 (2023-11-01):
  * Fixed formula input when given as variable and combined with `with` (issue #111)
  * Fixed formula containing variables with spaces (issue #120)
  * Fixed broken grouping when `colour` argument was given in `ggroc` (issue #121)
  
1.18.4 (2023-07-04):
  * Fix regression in 1.18.3 in 'legacy.axes' in 'ggroc'

1.18.3 (2023-07-02):
  * Fix warning about 'aes_string' in 'ggroc'
  * Improvements in tests (thanks to Michael Chirico, pr #114, #115)
  * Fix upcoming CRAN warning about numeric version comparisons

1.18.2 (2023-05-13):
  * Fix CRAN submission NOTE (issue #112)

1.18.1 (2023-05-07):
  * Fix 'print'ing some curves built from a formula (issue #101)
  * Fix tests following upstream updates in density() (https://bugs.r-project.org/show_bug.cgi?id=18337)
  * Improvements in documentation

1.18.0 (2021-09-02):
  * Add CI of the estimate for 'roc.test' (DeLong, paired only for now) (code contributed by Zane Billings) (pr #95) 
  * Fix documentation and alternative hypothesis for Venkatraman test (issue #92)

1.17.0.1 (2021-01-07):
  * Fix CRAN incoming checks as requested by CRAN

1.17.0 (2020-12-29)
  * Accept more values in 'input' of coords (issue #67)
  * Accept 'kappa' for the 'power.roc.test' of two ROC curves (issue #82)
  * The 'input' argument to 'coords' for 'smooth.roc' curves no longer has a default
  * The 'x' argument to 'coords' for 'smooth.roc' can now be set to 'all' (also the default)
  * Fix bootstrap roc.test and cov with 'smooth.roc' curves
  * The 'ggroc' function can now plot 'smooth.roc' curves (issue #86)
  * Remove warnings with 'warnPartialMatchDollar' option (issue #87)
  * Make tests depending on vdiffr conditional (issue #88)

1.16.2 (2020-03-19)